tests/NormalTests/paczka2/big_fuzzy/42192384.err
Error in line 10: DBB A314 61,2
Error in line 21: cof A399 19,6
Error in line 13: rpQkOQlPDFa A4 84,7
Error in line 34: A314 A4 23,7
Error in line 18: PRLUPaClI A399 14,3
Error in line 44: A314 A314 18,4
Error in line 48: PRLUPaClI A399 76,4
Error in line 53: 4UuWU6T7x A314 49,2
Error in line 59: qqdSpB2 A4 -2,8
Error in line 60: PRLUPaClI A4 35,3
Error in line 74: A314 A314 61,6
Error in line 72: 4UuWU6T7x A399 38,4
Error in line 83: 4UuWU6T7x A399 60,0
Error in line 55: rpQkOQlPDFa A314 7,7
Error in line 88: A314 A314 36,7
Error in line 93: rpQkOQlPDFa A513 12,1
Error in line 85: DBB A314 59,8
Error in line 112: DBB A4 51,8
Error in line 111: qqdSpB2 A314 15,7
Error in line 106: rpQkOQlPDFa A4 22,7
Error in line 118: rpQkOQlPDFa A399 70,0
Error in line 134: c.f A513 19,2
Error in line 135: cofA51342,0
Error in line 130: A314 A513 88,5
Error in line 131: cof A4 69,4
Error in line 148: A314 A399 88,7
Error in line 153: A314 A4 76,8
Error in line 152: cof A513 76,8
Error in line 167: qqdSpB< A4 3,7
Error in line 163: qqdSpB2 A399 0,8
Error in line 171: A314 A399 79,3
Error in line 183: rpQkOQlPDFa A314 21,5
Error in line 193: DBB A399 105,4
Error in line 208: A314 A513 56,5
Error in line 209: A314 A4 39,4
Error in line 216: A314 A513 53,3
Error in line 212: rpQkOQlPDFa A513 16,6
Error in line 203: DBB A4 96,5
Error in line 225: qqdSpB2 A399 9,5
Error in line 230: A314 A513 61,12
Error in line 217: A314 A399 75,3
Error in line 227: cof A314 75,5
Error in line 231: A314 A513 284,6
Error in line 244: PRLUPaClI A513 13,8
Error in line 246: PRLUPaClI A399 16,7
Error in line 240: DBB A513 50,2
